Layout issues fixed.

--- a/app/assets/stylesheets/config/colors.css.sass
+++ b/app/assets/stylesheets/config/colors.css.sass
@@ -71,3 +71,6 @@ $blueprint-table-stripe-color : #e5ecf9
 $code-color : $quiet-color
 
 $code-bg-color : darken($blueprint-background-color, 5%)
+
+$footer-color : $quiet-color
+$footer-bg-color : lighten($link-color, 30%)
