--- a/app/assets/stylesheets/layout.css.sass
+++ b/app/assets/stylesheets/layout.css.sass
@@ -5,10 +5,16 @@
 @import blueprint/reset
 @import blueprint/buttons
 @import compass/css3
+@import compass/layout/sticky-footer
+
 +blueprint
+
++sticky-footer(150px, "#root", "#root-footer", "footer")
 
 body
   margin: 0
+  min-height: 100%
+  margin-bottom: 150px
   header
     background-color: $header-background-color
     +filter-gradient($header-background-color, $header-background-color-gradient-bottom, vertical)
@@ -45,7 +51,8 @@ body
 
           li
             display: inline
-
+  .section
+    padding: 10px 0
   a.button, button.button, input.button
     color: #333
     text-decoration: none
@@ -74,13 +81,12 @@ body
   button.button, input.button
     +button-button
 
-  .content
-    padding: 1.5em 10px 2em
 
-
-  #notice
-    color: $notice-bg-color
+  p#notice
+    color: $notice-color
     background-color: $notice-bg-color
+    margin: 1em 0
+    padding: 1em 2em
 
   .field_with_errors
     background-color: $error-bg-color
@@ -101,4 +107,35 @@ body
     border: 1px solid $border-color
     +border-radius
     +box-shadow(inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05))
+
+  footer
+    background-color: $footer-bg-color
+    +background-image(linear-gradient(top, $footer-bg-color 0%,lighten($footer-bg-color, 10%) 100%))
+    color: $footer-color
+    h3
+      color: $footer-color
+      font-style: italic
+    .col
+      font-size: 14px
+      +column(4)
+      padding-bottom: 0
+      &.right
+        +column(4, true)
+      .section
+        border-left: 1px solid $border-color
+        height: 130px
+        padding: 10px
+      &.left
+        .section
+          border-left: 0
+      ul.sponsors
+        list-style: none
+        margin: 0
+        padding: 0
+        li
+          display: inline
+          margin: 0 5px 0 0
+          padding: 0
+          img
+            height: 30px
 
